# business_card_scan_flutter

./: .gitignore  README.md  pubspec.yaml
android/app/: CMakeLists.txt  build.gradle
android/app/src/debug/: AndroidManifest.xml
android/app/src/main/: AndroidManifest.xml
android/app/src/main/kotlin/com/example/business_card_scan_flutter/: MainActivity.kt
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: bc_list_widget.dart  camera_widget.dart  edge_screen.dart  main.dart
lib/opencv-cpp/: edge_detector.cpp  image_processor.cpp  native_edge_detection.cpp  native_edge_detection.h
linux/: CMakeLists.txt  my_application.cc
test/: widget_test.dart
web/: index.html  manifest.json
